# bazel-go-grpc-playground

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
client/: BUILD.bazel  main.go
pkg/api/: BUILD.bazel  api.go  api_test.go
pkg/service/: BUILD.bazel  echo.pb.go  echo.proto
server/: BUILD.bazel  main.go
