load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/micnncim/bazel-go-grpc-playground/pkg/api",
    visibility = ["//visibility:public"],
    deps = ["//pkg/service:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["api_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/service:go_default_library"],
)
